--- a/infogram/app/src/main/res/values-qu/strings.xml
+++ b/infogram/app/src/main/res/values-qu/strings.xml
@@ -1,14 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">infogram</string>
-    <string name="nombre_de_usuario">Nombre de usuario</string>
-    <string name="contrasena">Contraseña</string>
+    <string name="nombre_de_usuario">usuario suti</string>
+    <string name="contrasena">kichana</string>
     <string name="button_text">LOGIN</string>
     <string name="no_tienes_cuenta">"¿No tienes cuenta?, "</string>
-    <string name="crea_una_aqui"> crea una aqui</string>
+    <string name="crea_una_aqui">crea una aqui</string>
     <string name="correo">Correo</string>
     <string name="nombre">Nombre</string>
     <string name="usuario">Usuario</string>
     <string name="confirme_contrasena">Confirme contraseña</string>
-    <string name="button_text_create_account">ÚNETE</string>
     <string name="title_crear_cuenta">Crear cuenta</string>
 </resources>
