--- a/infogram/app/src/main/res/values-en/strings.xml
+++ b/infogram/app/src/main/res/values-en/strings.xml
@@ -10,5 +10,11 @@
     <string name="nombre">Nombre</string>
     <string name="usuario">Usuario</string>
     <string name="confirme_contrasena">Confirme contraseña</string>
+    <string name="button_text_create_account">ÚNETE</string>
     <string name="title_crear_cuenta">Crear cuenta</string>
+    <string name="carlos_vargas_cardview">Carlos Vargas</string>
+    <string name="hace_cardview">Hace</string>
+    <string name="dias_cardview">" 4 dias"</string>
+    <string name="megusta_cardview">10 Me Gusta</string>
+    <string name="buscar_item">Buscar</string>
 </resources>
