--- a/infogram/app/src/main/res/values/strings.xml
+++ b/infogram/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="confirme_contrasena">Confirme contraseña</string>
     <string name="button_text_create_account">ÚNETE</string>
     <string name="title_crear_cuenta">Crear cuenta</string>
+    <string name="carlos_vargas_cardview">Carlos Vargas</string>
+    <string name="hace_cardview">Hace</string>
+    <string name="dias_cardview">" 4 dias"</string>
+    <string name="megusta_cardview">10 Me Gusta</string>
+    <string name="buscar_item">Buscar</string>
+    <string name="home_item">Home</string>
+    <string name="yo_item">Yo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
